# metasonic

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: mts_add_subdirectories.cmake  mts_compile_options.cmake  mts_fetch_library.cmake  mts_fetch_util.cmake
examples/audio_app/: CMakeLists.txt
examples/audio_app/include/: app.h  audio_device.h  main_view.h  main_window.h  settings_view.h
examples/audio_app/src/: app.cpp  main.cpp  main_view.cpp  main_window.cpp  settings_view.cpp
examples/audio_device/: CMakeLists.txt  main.cpp
examples/basic/: CMakeLists.txt
examples/basic/include/: main_view.h  main_window.h  popup_menu.h  settings_view.h
examples/basic/src/: main.cpp  main_view.cpp  main_window.cpp  popup_menu.cpp  settings_view.cpp
examples/discoverable/: CMakeLists.txt
examples/discoverable/src/: main.cpp
examples/print/: CMakeLists.txt  main.cpp
modules/audio/: CMakeLists.txt
modules/audio/benchmarks/: CMakeLists.txt  main.cpp
modules/audio/include/mts/audio/: audio_data.h  audio_file.h  buffer.h  bus.h  device.h  device_manager.h  unit.h  vector_operations.h  wire.h
modules/audio/include/mts/audio/detail/: buffer_allocator.h  device_engine.h  vector_operations_base.h  vector_operations_list.h  vector_operations_vdsp.h
modules/audio/src/: buffer_allocator.cpp  device.cpp  device_engine.cpp  device_engine.h  device_manager.cpp  vector_operations_vdsp.cpp
modules/audio/src/native/: core_audio_device_engine.cpp  core_audio_device_engine.h
modules/audio/src/native/mac/: core_audio_device.cpp  core_audio_device_engine.h
modules/audio/tests/: CMakeLists.txt  audio_file.cpp  buffer.cpp  vector_operations.cpp  wire.cpp
modules/core/: CMakeLists.txt
modules/core/include/mts/: ascii.h  assert.h  byte_vector.h  component.h  config.h  enum_array.h  enum_bitset.h  enum_set.h  enum_traits.h  error.h  exception.h  file_view.h  filesystem.h  final_action.h  flags.h  function.h  int24_t.h  iterator.h  macro.h  math.h  memory.h  memory_range.h  meta.h  mts.h  pcm.h  pointer.h  print.h  range.h  shared_singleton.h  stack_vector.h  string_literal.h  sutil.h  thread.h  time.h  traits.h  type_container.h  utf8.h  util.h  waitable.h
modules/core/include/mts/detail/: cmath.h  config.h  filesystem.h  iterator.h  mac_cf_helpers.h  mac_helpers.h  mac_objc_helpers.h  platform_macro.h  undef_macros.h
modules/core/include/mts/detail/utf8/: checked.h  core.h  cpp11.h  cpp17.h  unchecked.h
modules/core/include/mts/unicode/: convert.h  string_view.h
modules/core/src/: error.cpp  file_view.cpp  memory.cpp  thread.cpp
modules/core/tests/: CMakeLists.txt  config.cpp  enum_array.cpp  error.cpp  file_view.cpp  function.cpp  memory_range.cpp  meta.cpp  pointer.cpp  stack_vector.cpp  thread.cpp  traits.cpp  util.cpp  waitable.cpp
modules/core/tests/unicode/: convert.cpp  strinv_view.cpp
modules/event/: CMakeLists.txt
modules/event/include/mts/event/: common.h  event.h  filesystem.h  fstream.h  io_context.h  listener.h  task.h
modules/event/src/: event_private.h  filesystem.cpp  fstream.cpp  io_context.cpp  task.cpp
modules/event/src/native/mac/: mac_event.cpp
modules/event/tests/: CMakeLists.txt  buffer.cpp  fs.cpp  task.cpp
modules/event/tests/resources/: banana.txt
modules/graphics/: CMakeLists.txt
modules/graphics/include/mts/graphics/: alignment.h  color.h  context.h  font.h  geometry.h  image.h  padding.h  path.h  point.h  quad.h  rect.h  size.h  text_layout.h  unordered_rect_set.h
modules/graphics/include/mts/graphics/components/: clipping.h  geometries.h
modules/graphics/src/: geometry.cpp
modules/graphics/src/native/mac/: context.mm  font.mm  helpers.h  image.cpp  path.cpp  text_layout.cpp
modules/graphics/tests/: CMakeLists.txt  color.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/mts/ui/: animator.h  application.h  asset_manager.h  desktop.h  embedded_assets.h  event.h  key_event.h  key_modifiers.h  listener.h  mouse_event.h  native_view.h  object.h  popup_window.h  property.h  style.h  style_traits.h  styles.h  view.h  window.h
modules/ui/include/mts/ui/components/: property.h
modules/ui/include/mts/ui/controls/: button.h  combo_box.h  knob.h  label.h  popup_menu.h  popup_value.h  scroll_bar.h  scroll_list.h  scroll_view.h  styled_view.h  text_box.h
modules/ui/src/: animator.cpp  desktop.cpp  native_view.cpp  popup_window.cpp  property.cpp  view.cpp  window.cpp
modules/ui/src/asssets/: roboto_medium.cpp
modules/ui/src/controls/: button.cpp  combo_box.cpp  knob.cpp  label.cpp  popup_menu.cpp  popup_value.cpp  scroll_bar.cpp  scroll_list.cpp  scroll_view.cpp  styled_view.cpp  text_box.cpp
modules/ui/src/native/mac/: app_delegate.h  app_delegate.mm  application.mm  event.cpp  ns_bundle_info.h  ns_bundle_info.mm  ns_native_view.mm
modules/ui/tests/: CMakeLists.txt  color.cpp
